<resources>
    <string name="app_name">LDOE bunker code</string>
    <string name="no_connection">No internet connection</string>
    <string name="wait_a_second">Wait a second</string>
    <string name="loading">Loading...</string>
    <string name="alfa_code_for_today">Alfa\'s code for today</string>
    <string name="retry">Retry</string>
    <string name="theme_pref_key">theme_pref</string>
    <string name="action_setting">Setting</string>
    <string name="wrong_code">If code is wrong, retry</string>
    <string name="other">Yesterday Code: \nTomorrow Code: </string>
    <string name="othercode">-\n-</string>
</resources>
